tests/NormalTests/paczka2/big_fuzzy/83049777.err
Error in line 3: RzB S152 39,0
Error in line 19: RzB A482 66,5
Error in line 24: H4LO S152 49,_
Error in line 17: H4LO S276 58,7
Error in line 15: ANPH445JJ A733 58,2
Error in line 33: vT7GJHnbk A733 35,31
Error in line 27: vT7GJHnbk S276 77,4
Error in line 32: 4ZV1VBrhY A482 0,6
Error in line 37: ANPH445JJ S276 130,17
Error in line 25: H4LO S152 184,8
Error in line 53: Z1Xv2aTdA S152 96,2
Error in line 57: Z1Xv2aTdA A482 14,5
Error in line 56: ANPH445JJ S276 104,8
Error in line 63: Z1Xv2aTdA S152 88,2
Error in line 69: 4ZV1VBrhY S276 155,8
Error in line 51: RzB S276 129,1
Error in line 73: RzB A733 80,6
Error in line 76: RzB S152 37,5
Error in line 74: H4LO S152 96,6
Error in line 87: 4ZV1VBrhY A733 260,24
Error in line 106: Z1Xv2aTdA S152 16,5
Error in line 117: ANPH445JJ A733 51,82
Error in line 124: S152 A482 96,9
Error in line 129: ANPH445JJ A733 11,0
Error in line 130: ANPH445JJ S276 12,0
Error in line 123: RzB A733 10,5
Error in line 136: Z1Xv2aTdA S276 65,9
Error in line 140: 4ZV1VBrhY A482 78,3
Error in line 141: Z1Xv2aTdA A733 6,6
Error in line 160: 4ZV1VBrhY S152 44,0
Error in line 163: ANPH445JJ A482 39,6
Error in line 127: vT7GJHnbk A733 91,7
Error in line 172: RzB A733 12,9
Error in line 178: H4LO A733 18,0
Error in line 179: RzB A482 56,6
Error in line 187: H4LO S276 		,	
Error in line 186: H4LO A733 52,7
Error in line 183: RzB A733 24,1
Error in line 196: RzB S152 188,09
Error in line 201: H4LO S276 95,7
Error in line 189: RzB S152 83,6
Error in line 211: RzB A482 26,9
Error in line 219: vT7GJHnbk A733 61,0
Error in line 227: ANPH445JJ S276 76,3
Error in line 226: S152 S152 59,2
Error in line 229: RzB A733 20,5
